overflow css issue

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -58,7 +58,7 @@
 body {
   padding-top: 50px;
   /*background-color: #f5f5f5;*/
-  font-size: 12px;
+  font-size: 13px;
   margin-bottom:30px; 
 }
 .footer {
@@ -176,7 +176,7 @@ th:last-child {
 }
 .compact-row{
   height: 55px;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 .section-heading{
     font-size: 15px;  
